Fix number alignment (hopefully)

--- a/app/assets/stylesheets/components/stepper.css.less
+++ b/app/assets/stylesheets/components/stepper.css.less
@@ -10,16 +10,19 @@
 
       .step-circle {
         display: inline-block;
-        width: 22px;
-        height: 22px;
-        border-radius: 11px;
-        vertical-align: text-bottom;
+        width: 16px;
+        height: 16px;
+        line-height: 16px;
+        padding: 3px;
+        border-radius: 50%;
         text-align: center;
-        line-height: 21px;
+        box-sizing: initial;
         font-size: 12px;
         margin-right: 5px;
+        vertical-align: text-bottom;
         background-color: @navbar-default-bg;
         color: @navbar-default-color;
+        letter-spacing: 0;
       }
 
       h4.panel-title {
